Manifests/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment                                          
metadata:
  name: frontend
spec:
  replicas: 2                                             
  minReadySeconds: 15
  strategy:
    type: RollingUpdate                                   
    rollingUpdate: 
      maxUnavailable: 1                                   
      maxSurge: 1                                         
  template:                                               
    metadata:
      labels:
        app: frontend                                  
    spec:
      containers:
        - image: rognak/tmct
          imagePullPolicy: Always                         
          name: frontend
          ports:
            - containerPort: 80
