Manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: tomcat
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: tomcat-service
          servicePort: 8082
